<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tic_tac_toe">Tic-Tac-Toe!</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="todo">TODO</string>
    <string name="image">image</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="settings2">Settings</string>
    <string name="ai_opponent">Ai Opponent?</string>
    <string name="done">Done</string>
    <string name="done2">Done</string>
    <string name="hard_mode">Hard Mode?</string>
</resources>