<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="20dp"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    android:tag="fragmentPopup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/settings2"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fadeScrollbars="false"
            android:isScrollContainer="true"
            android:nestedScrollingEnabled="false"
            app:checkedChip="@id/opponentChip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/opponentChip"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/ai_opponent"
                android:textAlignment="textStart"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:chipIcon="@drawable/ic_launcher_foreground"
                app:chipIconVisible="false"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/option_2"
                app:checkedIcon="@drawable/ic_check" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/option_3"
                app:checkedIcon="@drawable/ic_check" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/done"
            app:layout_constraintBottom_toTopOf="@+id/settingsDoneBtn"
            app:layout_constraintEnd_toEndOf="@+id/settingsDoneBtn"
            app:layout_constraintStart_toStartOf="@+id/settingsDoneBtn"
            app:layout_constraintTop_toBottomOf="@+id/chipgroup" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settingsDoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/done2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_check"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>