<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:src="@drawable/xoxo"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/xoxo"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="524dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlay"
        app:srcCompat="@drawable/ic_settings"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_play"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_quit"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/btnPlay"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/play"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="@+id/btnPlay" />

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/settings"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="@+id/btnSettings" />

    <TextView
        android:id="@+id/textQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/quit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnQuit"
        app:layout_constraintEnd_toEndOf="@+id/btnQuit"
        app:layout_constraintStart_toStartOf="@+id/btnQuit" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/tic_tac_toe"
        android:textColor="#101F3A"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImage"
        tools:ignore="TextContrastCheck" />






</androidx.constraintlayout.widget.ConstraintLayout>